# viktorium

./: .gitignore  CMakeLists.txt  build.bat  build.sh  resources.qrc  resources.rc
include/: createeventdialog.h  createquizdialog.h  databasemanager.h  eventsmodel.h  exporthelper.h  groupdialog.h  groupmanager.h  groupmodel.h  lm.h  mainwindow.h  participantsmodel.h  previewwidget.h  questionswidget.h  questionwidget.h  quizmodel.h  quizpreviewwidget.h  reporthelper.h
install/: description.txt  eleron-viktorium.desktop.in  finish.html  license.txt  postinst.in  postrm.in  template1.html  welcome.html
lib/cmake-sbom/: sbom.cmake
lib/httplib/: CMakeLists.txt  README.md
lib/unilog/: CMakeLists.txt
lib/unilog/include/unilog/: log_utils.h  logger_entity.h  rotate_daily_file_sink.h  sink_entity.h  tpool_entity.h  unilog.h  unilogger.h
lib/unilog/src/unilog/: log_utils.cpp  logger_entity.cpp  sink_entity.cpp  tpool_entity.cpp  unilog.cpp  unilogger.cpp
lib/utils/: .gitignore  CMakeLists.txt
lib/utils/include/utils/: settings.h  utils.h
lib/utils/src/: settings.cpp  utils.cpp
src/: createeventdialog.cpp  createquizdialog.cpp  databasemanager.cpp  eventsmodel.cpp  exporthelper.cpp  groupdialog.cpp  groupmanager.cpp  groupmodel.cpp  lm.cpp  main.cpp  mainwindow.cpp  participantsmodel.cpp  previewwidget.cpp  questionswidget.cpp  questionwidget.cpp  quizmodel.cpp  quizpreviewwidget.cpp  reporthelper.cpp
tests/: dbtest.cpp  lmtest.cpp  resulttest.cpp
themes/: styles.qss  styles2.qss
